# p7_final

./: README.md
BCA/: BCAsnip.py  readme.txt
Dataset/: readme.txt
Dataset/RAW/arborio/: sample_arborio02398_1.npy  sample_arborio02398_10.npy  sample_arborio02398_100.npy  sample_arborio02398_101.npy  sample_arborio02398_102.npy  sample_arborio02398_103.npy  sample_arborio02398_104.npy  sample_arborio02398_105.npy  sample_arborio02398_106.npy  sample_arborio02398_107.npy  sample_arborio02398_108.npy  sample_arborio02398_109.npy  sample_arborio02398_11.npy  sample_arborio02398_110.npy  sample_arborio02398_111.npy  sample_arborio02398_112.npy  sample_arborio02398_113.npy  sample_arborio02398_114.npy  sample_arborio02398_115.npy  sample_arborio02398_116.npy  sample_arborio02398_117.npy  sample_arborio02398_118.npy  sample_arborio02398_119.npy  sample_arborio02398_12.npy  sample_arborio02398_120.npy  sample_arborio02398_121.npy  sample_arborio02398_122.npy  sample_arborio02398_123.npy  sample_arborio02398_124.npy  sample_arborio02398_125.npy  sample_arborio02398_126.npy  sample_arborio02398_127.npy  sample_arborio02398_128.npy  sample_arborio02398_129.npy  sample_arborio02398_13.npy  sample_arborio02398_130.npy  sample_arborio02398_131.npy  sample_arborio02398_132.npy  sample_arborio02398_133.npy  sample_arborio02398_134.npy  (+3314 more)
Dataset/RAW/basmati/: sample_basmati02399_1.npy  sample_basmati02399_10.npy  sample_basmati02399_100.npy  sample_basmati02399_101.npy  sample_basmati02399_102.npy  sample_basmati02399_103.npy  sample_basmati02399_104.npy  sample_basmati02399_105.npy  sample_basmati02399_106.npy  sample_basmati02399_107.npy  sample_basmati02399_108.npy  (+4620 more)
ResNet/: ResNetSnippet.py
SDK/: CMakeLists.txt  main.cpp  readme.txt
Segmentation/: SampleProcessing.py  readme.txt
(+13032 files in other folders)
